# semantic-ai-agent

./: .env.example  .gitignore  AGENTS.md  README.md  Untitled  compose.yaml  pyproject.toml
.cursor/rules/: data-conventions.mdc  hr-cache-spec.mdc  notebook-conventions.mdc  quality-workflow.mdc
notebooks/: 00-semantic-cache-demo.ipynb  01-experiment.ipynb
src/semantic_ai_agent/: __init__.py
src/semantic_ai_agent/cache/: __init__.py  config.py  evals.py  wrapper.py
