[project]
name = "semantic'ai'agent"
version = "0.1.0"
description = "Redis Semantic Caching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "missingno",
    "xgboost",
    "fg-data-profiling",
    "torch",
    "jupyterlab",
    "ipykernel",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "nbmake",
    "nbqa",
    "mypy",
    "pre-commit",
    "poethepoet",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diplo_mod_1"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.poe.tasks]
lint = { shell = "ruff check . && ruff format --check ." }
fmt = "ruff format ."
typecheck = { shell = "mypy src && nbqa mypy notebooks" }
nbtest = "pytest --nbmake notebooks"
check = ["lint", "typecheck", "nbtest"]
precommit = "uv run pre-commit run --all-files --verbose"
precommit-update = "uv run pre-commit run --hook-stage manual pre-commit-update"
