[project]
name = "semantic-ai-agent"
version = "0.1.0"
description = "Redis Semantic Caching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "missingno",
    "transformers==4.54.1",
    "sentence-transformers==5.0.0",
    "redis==6.4.0",
    "redisvl==0.8.2",
    "python-dotenv==1.1.1",
    "langchain==0.3.27",
    "langchain-core==0.3.72",
    "langchain-google-genai==2.1.8",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.9",
    "langgraph==0.6.2",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.2",
    "langgraph-sdk==0.2.0",
    "langsmith==0.4.9",
    "jupyterlab",
    "panel==1.7.5",
    "jaro-winkler==2.0.3", 
    "seaborn==0.13.2", 
    "fuzzywuzzy==0.18.0",  
    "gradio==5.49.1",  
    "gradio-client==1.13.3",   
    "tavily-python==0.7.12",   
    "jupyter-ai>=3.0.0b7", 
    "ipykernel",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "nbmake",
    "nbqa",
    "mypy",
    "pre-commit",
    "poethepoet",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_ai_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.poe.tasks]
lint = { shell = "ruff check . && ruff format --check ." }
fmt = "ruff format ."
typecheck = { shell = "mypy src && nbqa mypy notebooks" }
nbtest = "pytest --nbmake notebooks"
check = ["lint", "typecheck", "nbtest"]
precommit = "uv run pre-commit run --all-files --verbose"
precommit-update = "uv run pre-commit run --hook-stage manual pre-commit-update"
